--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 (_LT_LANG_CXX_CONFIG): Fix m4 quoting
+	for lt_simple_link_test_code.
+	Reported by Nicolas Joly <njoly@pasteur.fr>.
+
 2005-10-05  Gary V. Vaughan  <gary@gnu.org>
 
 	* tests/subproject.at: New tests for libltdl as a subproject with
