--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-09  Christian Biesinger  <cbiesinger@web.de>
+
+	* libltdl/m4/libtool.m4 (_LT_LANG_CXX_CONFIG) [ beos ]:
+	Initial shared library support for C++.
+
 2005-10-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* configure.ac (abs_top_builddir, abs_top_srcdir): always
