--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/stresstest.at [ aix3, beos, os2 ]: Always use
+	`-no-undefined'.
+
 2005-10-09  Christian Biesinger  <cbiesinger@web.de>
 
 	* libltdl/m4/libtool.m4 (_LT_LANG_CXX_CONFIG) [ beos ]:
