--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-10-10  Gary V. Vaughan  <gary@gnu.org>
+
+	* libltdl/m4/ltdl.m4 (LTDL_CONVENIENCE, LTDL_INSTALLABLE): Remove
+	AC_SUBST of LIBLTDL, LTDLINCL, and all mention of INCLTDL.
+	(LT_WITH_LTDL): Due to order constraints between LTDL_CONVENIENCE,
+	LTDL_INSTALLABLE, LT_WITH_LTDL & LTDL_INIT, we can safely AC_SUBST
+	LIBLTDL and LTDLINCL here.  Also, remember to synch INCLTDL.
+
 2005-10-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* tests/stresstest.at [ aix3, beos, os2 ]: Always use
