--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-10-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/m4/ltdl.m4 (LTDL_CONVENIENCE, LTDL_INSTALLABLE)
+	(LT_WITH_LTDL): Revert Gary's 2005-10-10 patch.
+
 	* tests/stresstest.at: Use `allow_undefined_flag' instead of
 	host_os setting.
 
