--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-10-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/testsuite.at (LT_AT_AUTOMAKE): New macro.
+	* tests/subproject.at: Use it.  Do not call `autoreconf' in
+	tests, since it will try to reconfigure `sub/ltdl', which
+	breaks `make check' during `distcheck' because of a readonly
+	source tree.
+
 	* libltdl/m4/ltdl.m4 (LT_WITH_LTDL): Also set INCLTDL.
 
 	* libltdl/m4/ltdl.m4 (LTDL_CONVENIENCE, LTDL_INSTALLABLE)
