--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-13  Peter O'Gorman  <peter@pogma.com>
+
+	* libltdl/ltdl.c (find_module): Check that dir is set.
+	(load_deplibs): Don't free the user search paths too early.
+
 2005-10-10  Gary V. Vaughan  <gary@gnu.org>
 
 	* ltdl.m4 (AC_LTDL_ENABLE_INSTALL): Remove bogus extra
