--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 (LT_PATH_NM): End test source with
+	newline.
+	Reported by Charles Wilson <cygwin@cwilson.fastmail.fm>.
+
 2005-10-13  Peter O'Gorman  <peter@pogma.com>
 
 	* libltdl/ltdl.c (find_module): Check that dir is set.
