--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-14  Gary V. Vaughan  <gary@gnu.org>
+
+	* tests/subproject.at (_LTDL_SETUP): Use pushdef/popdef to
+	simulate file-local scope.  Empty source file compilation is not
+	portable, so add minimal code to generated foo.c file.
+
 2005-10-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/m4/libtool.m4 (LT_PATH_NM): End test source with
