--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-17  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in [darwin]: Don't check for "bundle" in file path. 
+	Reported by Christoph Egger <Christoph_Egger@gmx.de>.
+
 2005-10-13  Peter O'Gorman  <peter@pogma.com>
 
 	* libltdl/ltdl.c (find_module): Check that dir is set.
