--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-10-26  Gary V. Vaughan  <gary@gnu.org>
+
+	* libtoolize.m4sh: Always copy pkgconfig_files for --ltdl, incase
+	ltdl needs additional things not found by automake when looking at
+	the parent project configury.
+	* tests/libtoolize.at: Adjust.
+
 2005-10-17  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* libltdl/config/ltmain.m4sh [darwin]: Don't check for "bundle"
