--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -2249,10 +2249,76 @@ also specify a subdirectory name here if you are not using Autoconf
 for example.  If @command{libtoolize} can't determine the target
 directory, @samp{libltdl} is used as the default.
 
+@item --nonrecursive
+If passed in conjunction with @option{--ltdl}, this option will cause
+the @command{libltdl} installed by @samp{libtoolize} to be set up for
+use with a non-recursive @command{automake} build.  To make use of it,
+you will need to add the following to the @file{Makefile.am} of the
+parent project:
+
+@example
+## libltdl/Makefile.inc @r{appends to the following variables}
+## @r{so we set them here before including it:}
+BUILT_SOURCES	   =
+
+AM_CPPFLAGS        =
+AM_LDFLAGS         =
+
+noinst_LTLIBRARIES =
+lib_LTLIBRARIES	   =
+EXTRA_LTLIBRARIES  =
+
+EXTRA_DIST	   =
+
+CLEANFILES	   =
+MOSTLYCLEANFILES   =
+
+include libltdl/Makefile.inc
+@end example
+
+@noindent
+The @file{Makefile.inc} included here requires that the libltdl
+sources are in a subdirectory named @file{libltdl}, and you cannot use
+a different directory name for a @samp{nonrecursive} build.
+
 @item --quiet
 @itemx -q
 Work silently.  @samp{libtoolize --quiet} is used by @sc{gnu} Automake
 to add libtool files to your package if necessary.
+
+@item --recursive
+If passed in conjunction with @option{--ltdl}, this option will cause
+the @command{libtoolize} installed @samp{libltdl} to be set up for use
+with a recursive @command{automake} build.  To make use of it, you
+will need to adjust the parent project's @file{configure.ac}:
+
+@example
+AC_CONFIG_FILES([libltdl/Makefile])
+@end example
+
+@noindent
+and @file{Makefile.am}:
+
+@example
+SUBDIRS += libltdl
+@end example
+
+@item --subproject
+If passed in conjunction with @option{--ltdl}, this option will cause
+the @command{libtoolize} installed @samp{libltd} to be set up for
+independent configuration and compilation as a self-contained
+subproject.  To make use of it, you should arrange for your build to
+call @command{libltdl/configure}, and then run @command{make} in the
+@file{libltdl} directory (or the subdirectory you put libltdl into).
+If your project uses Autoconf, you can use the supplied
+@samp{LT_WITH_LTDL} macro, or else call @samp{AC_CONFIG_SUBDIRS}
+directly.
+
+Previous releases of @samp{libltdl} built exclusively in this mode,
+but now it is the default mode both for backwards compatibility and
+because, for example, it is suitable for use in projects that wish to
+use @samp{libltdl}, but not use the Autotools for their own build
+process.
 
 @item --verbose
 @itemx -v
