--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/tagtrace.test: Allow `$AUTOCONF' to contain arguments.
+	Skip if the running `autoconf' version is older than the one
+	used to bootstrap Libtool.
+
 2005-10-26  Eric Blake  <ebb9@byu.net>,
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
