--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.5.21a: 2005-??-??; CVS version 1.5.21a, Libtool team:
+* Fix 1.5 regression that caused linking a program `-static' to also
+  link statically against installed libtool libraries, contrary to
+  documented (and actual 1.4.x) behavior.
 * Bug Fixes.
 
 New in 1.5.20: 2005-08-31; CVS version 1.5.19a, Libtool team:
