--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-31  Albert Chin-A-Young  <china@thewrittenword.com>
+
+	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG)
+	[ aix ]: Remove duplicate always_export_symbols=yes for AIX.
+
 2005-10-29  Howard Chu  <hyc@highlandsun.com>
 
 	* libltdl/config/ltmain.m4sh (func_mode_link):
