--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-31  Kean Johnston  <jkj@sco.com>
+
+	* libltdl/m4/ltdl.m4 (LT_SYS_DLOPEN_DEPLIBS): All SCO platforms
+	open dependency libraries when you dlopen a module.
+
 2005-10-31  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS, _LT_LANG_CXX_CONFIG)
