--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-11-01  Gary V. Vaughan  <gary@gnu.org>
+
+	* libltdl/m4/argz.m4, libltdl/m4/ltoptions.m4, libltdl/ltsugar.m4,
+	libltdl/m4/ltversion.in: Add serial number tags, and bump serial
+	number.
+
 2005-10-31  Kean Johnston  <jkj@sco.com>
 
 	* libltdl/m4/libtool.m4 (LT_CMD_MAX_LEN): Set correctly for SCO.
