--- a/THANKS
+++ b/THANKS
@@ -6,6 +6,7 @@
   to Libtool that an exchange of legal papers with the FSF was warranted:
 
   Gord Matzigkeit		gord@gnu.org			  1996-07-11
+  James Kean McDonald Johnston	jkj@sco.com			  1997-08-26
   Gary V. Vaughan		gary@gnu.org			  1998-11-24
   Alexandre Oliva		oliva@dcc.unicamp.br		  1999-03-26
   Thomas Tanner			tanner@ffii.org			  1999-06-23
@@ -14,6 +15,7 @@
   Lars J. Aas			lars@sim.no			  2000-07-07
   Morten Eriksen		morten@sim.no			  2000-07-07
   Robert Boehne			rboehne@gnu.org			  2000-09-25
+  Stepan Kasal			kasal@ucw.cz			  2000-04-12
   Paul Sokolovsky		Paul.Sokolovsky@technologist.com  2000-05-06
   Daniel P. McNichol		mcnichol@austin.ibm.com		  2000-12-08
   Bruce Korb			bkorb@gnu.org			  2000-10-11
@@ -75,10 +77,12 @@
   DJ Delorie			dj@delorie.com
   Edouard G. Parmelan		Edouard.Parmelan@France.NCR.COM
   Erez Zadok			ezk@shekel.mcl.cs.columbia.edu
+  Eric Blake			ericblake@comcast.net
   Eric Estievenart		eric@via.ecp.fr
   Frank Ch. Eigler		fche@cygnus.com
   Fred Cox			sailorfred@yahoo.com
   H.J. Lu			hjl@gnu.org
+  Howard Chu			hyc@highlandsun.com
   Ian Lance Taylor		ian@cygnus.com
   Jeff Squyres			jsquyres@lam-mpi.org
   Joel N. Weber II		devnull@gnu.org
@@ -97,11 +101,11 @@
   Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
   Robert Ögren			lists@roboros.com
   Sebastian Wilhelmi		wilhelmi@ira.uka.de
-  Stepan Kasal			kasal@ucw.cz
   Stephan Kulow			coolo@kde.org
   Steven M. Schultz		sms@wlv.iipo.gtegsc.com
   Sven Verdoolaege		skimo@liacs.nl
   Tim Mooney			mooney@dogbert.cc.ndsu.NoDak.edu
+  Tim Rice			tim@multitalents.net
   Todd Vierling			tv@pobox.com
   Tom Tromey			tromey@cygnus.com
   Tor Lillqvist			tml@iki.fi
