--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2005-11-01  Kean Johnston  <jkj@sco.com>,
+	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 (LT_SYS_DLOPEN_SELF): Use
+	`lt_prog_compile_static', not `link_static_flag'.  Expand `$wl'
+	so expansion of `export_dynamic_flag_spec' works.
+	(_LT_TRY_DLOPEN_SELF): Show dlerror() in case of failure.
+	(_LT_LINKER_SHLIBS) [ aix3 ]: Likewise.
+	(_LT_COMPILER_PIC) [ hpux* ]: Use `${wl}'.
+
 2005-11-01  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
 
 	* THANKS: Updated.
