--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-11-01  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 (_LT_ENABLE_LOCK) [ solaris ]: Add `-64'
+	to $LD if necessary, to permit combining of several convenience
+	libs without any further objects added.
+	Reported by Brian Barrett <brbarret@open-mpi.org>.
+
 2005-11-01  Kean Johnston  <jkj@sco.com>,
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
