--- a/THANKS
+++ b/THANKS
@@ -6,7 +6,7 @@
   to Libtool that an exchange of legal papers with the FSF was warranted:
 
   Gord Matzigkeit		gord@gnu.org			  1996-07-11
-  James Kean McDonald Johnston	jkj@sco.com			  1997-08-26
+  Kean Johnston			jkj@sco.com			  1997-08-26
   Gary V. Vaughan		gary@gnu.org			  1998-11-24
   Alexandre Oliva		oliva@dcc.unicamp.br		  1999-03-26
   Thomas Tanner			tanner@ffii.org			  1999-06-23
@@ -77,7 +77,7 @@
   DJ Delorie			dj@delorie.com
   Edouard G. Parmelan		Edouard.Parmelan@France.NCR.COM
   Erez Zadok			ezk@shekel.mcl.cs.columbia.edu
-  Eric Blake			ericblake@comcast.net
+  Eric Blake			ebb9@byu.net
   Eric Estievenart		eric@via.ecp.fr
   Frank Ch. Eigler		fche@cygnus.com
   Fred Cox			sailorfred@yahoo.com
