--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-04  Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
+
+	* THANKS: Updated.
+
 2005-11-02  Gary V. Vaughan  <gary@gnu.org>
 
 	* tests/nonrecursive.at: New tests for libltdl as a subdirectory,
